--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
   "globals": {
-    "H5P": true,
-    "H5PIntegration": true,
+    "H5P": "readonly",
+    "H5PIntegration": "readonly",
     "H5PEditor": true
   },
   "env": {
@@ -9,7 +9,10 @@
     "node": true,
     "es2020": true
   },
-  "extends": "eslint:recommended",
+  "extends": [
+    "eslint:recommended",
+    "plugin:jsdoc/recommended"
+  ],
   "parserOptions": {
     "sourceType": "module",
     "ecmaVersion": 2020
@@ -31,5 +34,15 @@
     }],
     "no-extra-boolean-cast": "off",
     "no-console": ["error", {"allow": ["warn", "error"]}]
+  },
+    "plugins": [
+    "jsdoc"
+  ],
+  "settings": {
+    "jsdoc": {
+      "preferredTypes": {
+        "Function": "function"
+      }
+    }
   }
 }
