--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "h5p-editor-portfolio-chapter",
+  "name": "h5peditor-portfolio-chapter",
   "version": "0.7.0",
   "description": "Editor widget for portfolio chapter",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "stylelint './src/**/*.scss' && eslint './src/**/*.js'",
     "build": "webpack --mode=production",
     "watch": "webpack --watch --mode=development"
   },
@@ -31,7 +32,11 @@
     "regenerator-runtime": "^0.13.11",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.2",
+    "stylelint": "^15.5.0",
+    "stylelint-config-recommended": "^12.0.0",
+    "stylelint-config-recommended-scss": "^10.0.0",
     "webpack": "^5.77.0",
     "webpack-cli": "^5.0.1"
-  }
+  },
+  "browserslist": "> 0.5%, last 2 versions, Firefox ESR, not dead"
 }
