--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "webpack": "^5.81.0",
     "webpack-cli": "^5.0.2"
   },
+  "dependencies": {
+    "he": "^1.2.0"
+  },
   "browserslist": "> 0.5%, last 2 versions, Firefox ESR, not dead"
 }
